--- a/main.html
+++ b/main.html
@@ -7,6 +7,37 @@
 </head>
 
 <body>
+	<h1>Item Cart</h1>
+	<table>
+		<tr>
+			<th>Item</th>
+			<th>Price</th>
+			<th>Quantity</th>
+		</tr>
+		<tr>
+		<th>banana</th>
+		<th>1.00</th>
+		<th>3</th>
+		</tr>
+
+      <tr>
+		<th>burger</th>
+		<th>6.90</th>
+		<th>1</th>
+		</tr>
+
+		 <tr>
+		<th>Cookie</th>
+		<th>4.20</th>
+		<th>4</th>
+		</tr>
+
+		 <tr>
+		<th>total</th>
+		<th>12.10</th>
+		<th>8</th>
+		</tr>
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
