--- a/main.html
+++ b/main.html
@@ -9,13 +9,15 @@
 <body>
 	
 	<table>
+		<thead>
 		<tr>
 			<th>Item</th>
 			<th>Price</th>
 			<th>Quantity</th>
 		</tr>
+			</thead>
 		<tr>
-		<th>banana</th>
+		<th>Banana</th>
 		<td>₹1.00</td>
 		<td>3</td>
 		</tr>
