--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 		</tr>
 
       <tr>
-		<th>burger</th>
+		<th>Burger</th>
 		<td>₹6.90</td>
 		<td>1</td>
 		</tr>
@@ -35,7 +35,7 @@
 		</tr>
 
 		 <tr>
-		<th>total</th>
+		<th>Total</th>
 		<td>₹12.10</td>
 		<td>8</td>
 		</tr>
